# NDKTraceSkills

./: .gitignore  README.md
cli/: CMakeLists.txt
cli/include/ndktrace/: crash_artifact_parser.h  elf_build_id.h  json_output.h  models.h  parser.h  platform.h  project_resolver.h  services.h  symbol_file_resolver.h
cli/src/: crash_artifact_parser.cpp  elf_build_id.cpp  json_output.cpp  main.cpp  parser.cpp  platform.cpp  project_resolver.cpp  services.cpp  symbol_file_resolver.cpp
cli/tests/: test_artifact_parser.cpp  test_parser.cpp  test_project_resolver.cpp  test_symbol_file_resolver.cpp
cli/tests/fixtures/: android_logcat.txt  apk_offset_frames.txt  dex_frames.txt  full_tombstone.txt  memory_map_buildid_load_base.txt  shared_library_frames.txt
docs/: architecture.md  cli.md  index.md  mcp-server.md  skill.md
mcp/server/: pyproject.toml  server.py
skills/android-native-crash-analysis/: SKILL.md
skills/android-native-crash-analysis/agents/: openai.yaml
